formatted popup.html for readability

--- a/extension_files/popup.html
+++ b/extension_files/popup.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Price Popup</title>
-</head>
-<body>
-<div id="price">Loading price...</div>
-<script src="popup.js"></script>
-</body>
+    <head>
+        <title>Price Popup</title>
+    </head>
+    <body>
+        <div id="price">Loading price...</div>
+        <script src="popup.js"></script>
+        <area> 
+    </body>
 </html>
