Works as mini calculator

--- a/extension_files/popup.html
+++ b/extension_files/popup.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Price Popup</title>
+    <title>Emissions Calculator</title>
 </head>
 <body>
-<div id="price">Loading price...</div>
-<script src="popup.js"></script>
+    <h1>Calculate Emissions</h1>
+    <input type="text" id="company" placeholder="Enter company name">
+    <input type="number" id="price" placeholder="Enter product price">
+    <button id="calculate">Calculate</button>
+    <div id="result" style="margin-top: 10px; font-weight: bold;"></div>
+    <script src="scripts/popup.js"></script>
 </body>
 </html>
