--- a/extension_files/popup.html
+++ b/extension_files/popup.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>Emissions Calculator</title>
 </head>
 <body>
     <h1>Calculate Emissions</h1>
-    <input type="text" id="company" placeholder="Enter company name">
-    <input type="number" id="price" placeholder="Enter product price">
-    <button id="calculate">Calculate</button>
     <div id="result" style="margin-top: 10px; font-weight: bold;"></div>
     <script src="scripts/popup.js"></script>
 </body>
